[package]
name = "flatten_dir"
version = "0.1.0"
authors = ["Adolfo H. Wernke <adolfohw@gmail.com>"]
edition = "2018"
description = "Recursive directory flattener"
repository = "https://github.com/adolfohw/flatten-dir"
license = "MIT"
keywords = ["flatten", "directory", "dir"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"